--- a/_posts/2025-12-23-블로그 첫 포스팅 테스트!.md
+++ b/_posts/2025-12-23-블로그 첫 포스팅 테스트!.md
@@ -9,6 +9,7 @@ summary: Demo Content using Netlify CMS
 keywords: blog test post
 permalink: /blog/using-netlify-cms/
 --- -->
+
 ### **포스팅 테스트**
 
 ```javascript
@@ -28,6 +29,14 @@ test code block
 
 이미지 테스트
 
-![1766441101520](image/2019-02-04-welcome-to-jekyll/1766441101520.png)
+![1766446970851](image/2025-12-23-블로그첫포스팅테스트!/1766446970851.png)
+
+배포 시 이미지 데이터 처리 관련 기능 수정
+
+
+| col1  | col2 | col3 |
+| ----- | ---- | ---- |
+| test1 | 1    | 1    |
+| test2 | 2    | 2    |
 
 감사합니다.
