--- a/_posts/2025-12-23-블로그 첫 포스팅 테스트!.md
+++ b/_posts/2025-12-23-블로그 첫 포스팅 테스트!.md
@@ -29,10 +29,9 @@ test code block
 
 이미지 테스트
 
-![1766446970851](image/2025-12-23-블로그첫포스팅테스트!/1766446970851.png)
+![wallpapaer1](image/wallpapaer1.png)
 
 배포 시 이미지 데이터 처리 관련 기능 수정
-
 
 | col1  | col2 | col3 |
 | ----- | ---- | ---- |
